# muuf

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config-example.toml  muuf-example.toml
examples/: config.rs  notify.rs  parse.rs  torrent.rs
src/: config.rs  dl.rs  lib.rs  main.rs  res.rs
src/checker/: collection.rs  mikan.rs  mod.rs  res_rule.rs
src/config/: mod.rs
src/dl/: mod.rs
src/notify/: mod.rs
src/parser/: mod.rs
src/res/: dmhy.rs  mod.rs
src/rss/: mod.rs
src/serve/: mod.rs
