[package]
name = "muuf"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies", "socks"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.13"
anyhow= "1"
chrono = "0.4"
transmission-rpc = "0.3"
clap = { version = "3.1", features = ["derive"] }
toml = "0.5"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1" 
tabled = {version = "0.7", features = ["color"] }
owo-colors = "3"
data-encoding = "2.3"
regex = "1"
once_cell = "1"
magnet-url = "2"