[package]
name = "muuf"
version = "0.1.5"
edition = "2021"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "socks"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.20"
chrono = { version = "0.4", features = ['serde'] }
transmission-rpc = "0.4.1"
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
data-encoding = "2.3"
regex = "1.10"
magnet-url = "2"
directories = "5.0"
quick-xml = { version = "0.36", features = ["serialize"] }
base64 = "0.22"
lava_torrent = "0.11"
bytes = "1.7"
futures = "0.3"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
http = "1"
color-eyre = "0.6.2"
tokio-util = "0.7.10"
tracing-error = "0.2.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
